--- a/challenges.yml
+++ b/challenges.yml
@@ -185,10 +185,11 @@ challenges:
       moneyReward: 20
       expReward: 20
       permissionReward: ''
-      repeatable: false
+      repeatable: true
+      maxtimes: 10
     homestead:
       friendlyname: 'Homestead'
-      description: 'Build a house that contains at least 1 wooden door, bed, bookshelf, crafting table, furnace, glass-block window, and torch.'
+      description: 'Build a house that contains at least 1 oak door, bed, bookshelf, crafting table, furnace, glass-block window, and torch.'
       icon: BED
       level: 'Jumper'
       type: collect
@@ -208,7 +209,7 @@ challenges:
       friendlyname: 'Nether'
       description: 'Build a nether portal and activate it.'
       icon: NETHERRACK
-      level: 'Acrobat'
+      level: 'Jumper'
       type: collect
       requiredItems: 'OBSIDIAN:10 PORTAL:1'
       takeItems: false
@@ -222,9 +223,46 @@ challenges:
       repeatRewardText: ''
       repeatMoneyReward: 0
       repeatExpReward: 0
+    fisherman:
+      friendlyname: '&aFisherman'
+      description: 'Catch &b5 Raw Fish, &b5 Raw &bSalmon, &b3 Pufferfish &6and &b1 Clownfish'
+      level: 'Jumper'
+      type: inventory
+      requiredItems: 'RAW_FISH:0:5 RAW_FISH:1:5 RAW_FISH:3:3 RAW_FISH:2:1'
+      repeatable: true
+      maxtimes: 10
+      icon: 349
+      takeItems: true
+      rewardText: 1 disk and 10 lapis lazuli
+      itemReward: 'RECORD_12:1 INK_SACK:4:10'
+      permissionReward: ''
+      moneyReward: 50
+      expReward: 50
+      repeatRewardText: 2 redstone, 2 inksac
+      repeatItemReward: 'REDSTONE:2 INK_SACK:4:2'
+      repeatMoneyReward: 25
+      repeatExpReward: 25
+    slimefarmer:
+      friendlyname: '&aSlime Farmer'
+      description: 'Collect &b32 Slimeballs &6from slimes'
+      level: 'Jumper'
+      type: inventory
+      requiredItems: 'SLIME_BALL:32'
+      repeatable: false
+      icon: SLIME_BALL
+      takeItems: true
+      rewardText: 4 slime blocks, 1 emerald
+      itemReward: 'SLIME_BLOCK:4 EMERALD:1'
+      permissionReward: ''
+      moneyReward: 70
+      expReward: 70
+      repeatRewardText: 1 redstone ore, 1 emerald
+      repeatItemReward: 'REDSTONE_ORE:1 EMERALD:1'
+      repeatMoneyReward: 35
+      repeatExpReward: 35
     ittakesavillage:
       friendlyname: 'Run For Mayor'
-      description: 'Hold a village meeting with 10 villagers!'
+      description: 'Hold a village meeting with &610 villagers!'
       icon: STONE
       level: 'Acrobat'
       type: collect
@@ -242,7 +280,7 @@ challenges:
       repeatExpReward: 0
     myprecious:
       friendlyname: 'My Precious'
-      description: 'Build an iron golem'
+      description: 'Build an &6iron golem'
       icon: NAME_TAG
       level: 'Acrobat'
       type: collect
@@ -260,7 +298,7 @@ challenges:
       repeatExpReward: 0
     snowplay:
       friendlyname: 'Snow Play!'
-      description: 'Build a snow golem'
+      description: 'Build a &6snow golem'
       icon: SNOW_BALL
       level: 'Acrobat'
       type: collect
