--- a/config.yml
+++ b/config.yml
@@ -18,23 +18,11 @@ general:
    # Example, 1000 will randomly spawn players between -1000,-1000 to 1000, 1000
    distance: 1000
 
-   # Protection radius given when planting a Welcome Sign
-   # Players can control what happens within their protected space
-   # Value of 20 means a 21x21 square at all heights with the warp block in the center
-   # If a player removes their sign, the protection is dropped.
-   # Players can trust other players with their space
-   protectionRange: 20
-
    # Banned commands - these commands cannot be run by players in the world
    # Bypass by Op or with the askygrid.mod.bannedcommands permission
    # The spawner command should be banned otherwise chaos will ensue!
    bannedcommands:
    - spawner
-   
-   # Commands to execute when a player starts for the first time
-   # Commands will be run as console. Use [player] to substitute the player's name
-   startcommands:
-   - give [player] bread 1
    
    # Remove mobs - this kills all monsters in the vicinity when the player logs in. 
    loginremovemobs: false
@@ -68,7 +56,7 @@ general:
 
    ##### Economy ######
    # Use economy or not. If true, an economy plugin is required. If false,
-   # no money is used or give and the mini-shop is disabled.
+   # no money is used or given by challenges.
    # If there is no economy plugin present anyway, money will be automatically
    # disabled.
    useeconomy: true
@@ -81,21 +69,14 @@ general:
 
    # Starting money - this is how much money new players will have as their
    # balance at the start. 
-   startingmoney: 10.00
+   startingmoney: 0
 
    # Reset Ender Chest - if true, the player's Ender Chest will be cleared when they
-   # start or restart their island. Default is false.
+   # start ASkyGrid. Default is false.
    # NOTE: Ender Chests span worlds, so it will clear ALL chests. In general,
-   # Enderchests should not be allowed in ASkyblock unless you only run the ASkyblock
-   # world. Ender Chest crafting and use is governed by the askyblock.craft.enderchest
-   # permission.
+   # Enderchests should not be allowed in ASkyGrid unless you only run the ASkyGrid
+   # world.
    resetenderchest: false
-
-   # Nether spawn protection radius - this is the distance around the nether spawn
-   # that will be protected from player interaction (breaking blocks, pouring lava etc.)
-   # Minimum is 0 (not recommended), maximum is 100. Default is 25.
-   # Only applies to standard nether.
-   netherspawnradius: 25
 
    # Broadcast 1st time challenge completion messages to all players.
    # Change to false if the spam becomes too much.
@@ -103,7 +84,7 @@ general:
 
    # Allow /island teleport when falling. If set to false, all teleporting is
    # disabled until death from the void or until you hit something.
-   # See commands that this will block too
+   # See commands that this will block too.
    allowfallingteleport: true
    blockingcommands:
    - home
@@ -121,9 +102,6 @@ general:
    # Accessed via sethome <number> or go <number>
    # Use this permission to set for specific user groups: askyblock.island.maxhomes.<number>  
    maxhomes: 1
-
-   # Have player's respawn on their island if they die
-   respawnonisland: true
 
    # Warp panel - GUI for welcome warp signs. If set to false, old-style
    # text will be used
@@ -150,12 +128,10 @@ world:
      DIAMOND_ORE: 1
      DIRT: 10
      DOUBLE_PLANT: 10
-     ENDER_CHEST: 1
      GLASS: 1
      GOLD_ORE: 10
      GRASS: 60
      GRAVEL: 10
-     ICE: 4
      IRON_ORE: 20
      LAPIS_ORE: 5
      LEAVES: 30
